--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -96,31 +96,18 @@ collections:
                 ],
             }
 
-      - file: "src/pages/pricing/index.md"
+      - file: "src/pages/products/index.md"
         label: "Pricing Page"
-        name: "products"
+        name: "pricing"
         fields:
           - {
               label: "Template Key",
               name: "templateKey",
               widget: "hidden",
-              default: "product-page",
+              default: "pricing-page",
             }
           - { label: Title, name: title, widget: string }
           - { label: Image, name: image, widget: image }
-          - { label: Heading, name: heading, widget: string }
-          - { label: Description, name: description, widget: string }
-          - {
-              label: Main,
-              name: main,
-              widget: object,
-              fields:
-                [
-                  { label: Heading, name: heading, widget: string },
-                  { label: Description, name: description, widget: text },
-                ],
-            }
-
           - {
               label: Pricing,
               name: pricing,
@@ -128,7 +115,7 @@ collections:
               fields:
                 [
                   { label: Heading, name: heading, widget: string },
-                  { label: Description, name: description, widget: string },
+                  { label: Subheading, name: subheading, widget: string },
                   {
                     label: Plans,
                     name: plans,
@@ -137,12 +124,38 @@ collections:
                       [
                         { label: Plan, name: plan, widget: string },
                         { label: Price, name: price, widget: string },
-                        {
-                          label: Description,
-                          name: description,
-                          widget: string,
-                        },
-                        { label: Items, name: items, widget: list },
+                      ],
+                  },
+                ],
+            }
+          - {
+              label: Main,
+              name: main,
+              widget: object,
+              fields:
+                [
+                  { label: Heading 1, name: heading1, widget: string },
+                  { label: Description 1, name: description1, widget: text },
+                  { label: Heading 2, name: heading2, widget: string },
+                  { label: Description 2, name: description2, widget: text },
+                ],
+            }
+          - {
+              label: Pricing,
+              name: pricing,
+              widget: object,
+              fields:
+                [
+                  { label: Heading, name: heading, widget: string },
+                  {
+                    label: Reviews,
+                    name: reviews,
+                    widget: list,
+                    fields:
+                      [
+                        { label: Text, name: text, widget: text },
+                        { label: Author, name: author, widget: string },
+                        { label: URL, name: url, widget: string },
                       ],
                   },
                 ],
