Add CMS for items we take

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -64,6 +64,11 @@ collections:
                     widget: "markdown",
                   },
 
+                  { label: Items We Take Column 1, name: col1, widget: string },
+                  { label: Items We Take Column 2, name: col2, widget: string },
+                  { label: Items We Take Column 3, name: col3, widget: string },
+                  { label: Items We Take Column 4, name: col4, widget: string },
+
                   { label: Heading 2, name: heading2, widget: string },
                   { label: Subheading 2, name: subheading2, widget: string },
                   {
